--- a/UIInfoSuite2/UIInfoSuite2.csproj
+++ b/UIInfoSuite2/UIInfoSuite2.csproj
@@ -20,6 +20,7 @@
   <ItemGroup>
     <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.1.1"/>
     <PackageReference Include="Pathoschild.Stardew.ModTranslationClassBuilder" Version="2.0.1"/>
+    <PackageReference Include="SimpleInjector" Version="5.4.6" />
   </ItemGroup>
 
   <Import Project="UIInfoSuite2.csproj.local" Condition="Exists('UIInfoSuite2.csproj.local')"/>
