--- a/UIInfoSuite2/UIInfoSuite2.csproj
+++ b/UIInfoSuite2/UIInfoSuite2.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ModZipPath>$(SolutionDir)\Releases</ModZipPath>
+    <BundleExtraAssemblies>ThirdParty</BundleExtraAssemblies>
     <EnableHarmony>true</EnableHarmony>
 
     <TranslationClassBuilder_AddGetByKey>true</TranslationClassBuilder_AddGetByKey>
@@ -20,6 +21,7 @@
   <ItemGroup>
     <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.1.1"/>
     <PackageReference Include="Pathoschild.Stardew.ModTranslationClassBuilder" Version="2.0.1"/>
+    <PackageReference Include="SimpleInjector" Version="5.4.6"/>
   </ItemGroup>
 
   <Import Project="UIInfoSuite2.csproj.local" Condition="Exists('UIInfoSuite2.csproj.local')"/>
